--- a/webdevelop.html
+++ b/webdevelop.html
@@ -1,153 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./webdebstyle.css">
-  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
-  <link href="https://fonts.cdnfonts.com/css/lovintime" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/rabbid-highway-sign-ii" rel="stylesheet">
-  <title>Developer</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./webstyle.css">
+  <link rel="shortcut icon" href="./assets/controller.svg" type="image/x-icon">
+    <link href="https://fonts.cdnfonts.com/css/lovintime" rel="stylesheet">
+  <title>Desarrollo Web</title>
 </head>
+
 <body>
-  <video playsinline autoplay loop muted src="./assets/file.mp4"></video> <!--BACKGROUND-->
+  <video playsinline autoplay loop muted src="./assets/david1.mp4"></video> <!--BACKGROUND-->
   <header>
     <nav class="nav navbar fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
-          <img src="./assets/angles-left-solid.svg" alt="Logo" width="30" height="24"
+          <img src="./assets/angles-left-solid.svg"  style="background-color: white;" alt="Logo" width="30" height="24"
             class="d-inline-block align-text-top logo">
         </a>
       </div>
     </nav>
   </header>
+  
   <section class="container-2">
     <div class="container">
       <div class="react">
-        <h1 class="text-center p-4 text-white">Portfolio Web Developer</h1>
-        
-        <div class="card-group">
-          
-          <div class="card m-2">
-            <img src="./assets/8.png.png" class="card-img-top img-fluid" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Our Story</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i></li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://trepcamp.org/OurStory?Ca=SEO&Ej=TrepCamp&An=NA&Es=Organic&Can=NA&Ro=Rec" target="_blank">View Demo <i class="bi bi-chevron-double-right"></i></a>
-            </div>
+        <h1 class="text-center p-4 text-white">Portfolio Desarrollo</h1>
+        <div class="row">
+          <div class="col">
+            <iframe class="img-portfolio m-3" src="https://drive.google.com/file/d/1t5L_a5F-Kb3hhhHay6joahtL2fuFeRg9/preview" width="640" height="480" allow="autoplay"></iframe>
+            <iframe class="img-portfolio m-3" src="https://drive.google.com/file/d/1nSJTuhcRhn1kSaF95a87tKdYk5y0Eyvj/preview" width="640" height="480" allow="autoplay"></iframe>
           </div>
-          <div class="card m-2">
-            <img src="./assets/7.png.png" class="card-img-top img-fluid" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Experience</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i></li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://trepcamp.org/es/Experience?Ca=SEO&Ej=TrepCamp&An=NA&Es=Organic&Can=NA&Ro=Rec" target="_blank">View Demo <i class="bi bi-chevron-double-right"></i></a>
-            </div>
-          </div>
-          <div class="card m-2">
-            <img src="./assets/bakery.PNG" class="card-img-top img-fluid" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Bakery</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i></li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://ing-dayana.github.io/BAKERY-Boostrapt-Web/" target="_blank">View Demo <i class="bi bi-chevron-double-right"></i></a>
-            </div>
-          </div>
-
-          <div class="card m-2">
-            <img src="./assets/8.png" class="card-img-top img-fluid" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Coffee shop</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i
-                  class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i>
-              </li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://ing-dayana.github.io/Coffe-Shop-Boostrapt-/" target="_blank">View Demo <i
-                  class="bi bi-chevron-double-right"></i></a>
-            </div>
-          </div>
-
-
-          <div class="card m-2">
-            <img src="./assets/9.png" class="card-img-top img-fluid" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Art Animation</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i
-                  class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i>
-              </li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://ing-dayana.github.io/Example-TweenMax/" target="_blank">View Demo <i
-                  class="bi bi-chevron-double-right"></i></a>
-            </div>
-          </div>
-
-        <div class="card-group">
-          <div class="card m-2">
-            <img src="./assets/10.png" class="card-img-top" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Ticket shop</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i
-                  class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i>
-              </li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://github.com/Ing-Dayana/Landing-Page-bootstrap-and-Gsap" target="_blank">View Demo <i class="bi bi-chevron-double-right"></i></a>
-            </div>
-          </div>
-
-          <div class="card m-2">
-            <img src="./assets/11.png" class="card-img-top" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Portfolio React JS 1</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i
-                  class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i>
-              </li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://github.com/Ing-Dayana/React-Js--Bootstrap-Portfolio" target="_blank">View Demo <i class="bi bi-chevron-double-right"></i></a>
-            </div>
-          </div>
-
-
-          <div class="card m-2">
-            <img src="./assets/12.png" class="card-img-top" alt="img">
-            <div class="card-body">
-              <h5 class="card-title text-center">Portfolio React JS 2</h5>
-            </div>
-            <ul class="list-group list-group-flush text-center">
-              <li class="list-group-item"><i class="fa-brands fa-html5 mx-2"></i><i class="fa-brands fa-css3-alt mx-2"></i><i
-                  class="fa-brands fa-bootstrap mx-2"></i><i class="fa-brands fa-sass mx-2"></i><i class="fa-brands fa-figma"></i>
-              </li>
-            </ul>
-            <div class="card-footer text-center">
-              <a class="btn" href="https://github.com/Ing-Dayana/React-Js-Portfolio" target="_blank">View Demo <i class="bi bi-chevron-double-right"></i></a>
-            </div>
+          <div class="col">
+            <iframe class="img-portfolio m-3" src="https://drive.google.com/file/d/1cKwbu0lLkFleDChtyZ3U3mzu6sdK-qDi/preview" width="640" height="480" allow="autoplay"></iframe>
           </div>
         </div>
       </div>
@@ -155,6 +44,8 @@
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
