--- a/webdesig.html
+++ b/webdesig.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./webstyle.css">
   <link rel="shortcut icon" href="./assets/controller.svg" type="image/x-icon">
     <link href="https://fonts.cdnfonts.com/css/lovintime" rel="stylesheet">
-  <title>Desarrollo Web</title>
+  <title>WEB DEVELOPER</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
   <section class="container-2">
     <div class="container">
       <div class="react">
-        <h1 class="text-center p-4 text-white">Portfolio Desarrollo</h1>
+        <h1 class="text-center p-4 text-white">WEB DEVELOPER</h1>
         <div class="row">
           <div class="col">
             <a href="./uxcaseii.html"><img src="./assets/P1.png" class="img-fluid img-portfolio m-3" alt=""></a>
