--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
           <div class="col">
             <h1 class="text-home">David Arechiga</h1>
-            <h4 class="pt-5 text-home">Unity<br>Developer</h4>
+            <h4 class="pt-5 text-home">Unity and Web<br>Developer</h4>
           </div>
           <div class="col">
             <img src="./assets/david.png" alt="img" class="img-fluid">
@@ -143,7 +143,6 @@
 
           <div class="col-sm-12 col-md-6 about-col-1 img-about">
             <img src="./assets/img2.jpeg" alt="" class="img-fluid mb-2">
-            <img src="./assets/img11(2).png" height="50%" alt="" class="img-fluid">
           </div>
         </div>
       </div>
