--- a/webdesig.html
+++ b/webdesig.html
@@ -36,6 +36,7 @@
           </div>
           <div class="col">
             <a href="./uxcasei.html"><img src="./assets/2.png" class="img-fluid img-portfolio m-3" alt=""></a>
+            <a href="./uxcaseiii.html"><img src="./assets/2.png" class="img-fluid img-portfolio m-3" alt=""></a>
           </div>
         </div>
       </div>
