--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <h1 class="text-center py-5 title-services">PORTFOLIO</h1> 
         <div class="row text-center">
           <div class="col"><h2 class="text-center"> WEB</h2>
-            <a href="./assets/9.png">MORE</a>
+            <a href="./webdesig.html">MORE</a>
             <h5 class="">Development of web and mobile applications. Using Front-End tools and languages.</h5>
             <a href="./webdesig.html"><img class="img-fluid" src="./assets/9.png" alt=""></a></div>
           <div class="col">
