--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
                 <h4>CUSTOMERS</h4>
                 <div class="text-center h1" id="counter2">0</div>
               </div>
+              <!--ABOUT onclick="downloadPDFes()
               <div class="col-12 col-about">
                 <button class="text-white cv">DOWNLOAD CV<i
-                    class="bi bi-download ps-3"></i></button>
+                    class="bi bi-download ps-3"></i></button>"-->
               </div>
             </div>
           </div>
