--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
             <form action="https://formspree.io/f/mayzoppo" method="POST" class="form">
               <div class="form-container py-2">
-                <h2 class="form-container mt-5 text-center contact-title">cONTAC ME</h2>
+                <h2 class="form-container mt-5 text-center contact-title">Contact me</h2>
                 <input type="text" class="form-input" name="name" placeholder="Nombre:">
                 <input type="email" name="email" class="form-input" placeholder="Correo:">
                 <textarea class="form-input form-input--message" name="message" placeholder="Mensaje:"></textarea>
