--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
           <div class="col-sm-12 col-md-6 about-col-1 img-about">
             <img src="./assets/img2.jpeg" alt="" class="img-fluid mb-2">
+            <img src="./assets/img2.jpeg" alt="" class="img-fluid mb-2">
           </div>
         </div>
       </div>
