--- a/index.html
+++ b/index.html
@@ -104,21 +104,22 @@
     </div>
   </section>
 
-  <!--ABOUT onclick="downloadPDFes()"-->
+  <!--ABOUT-->
   <section class="about" id="about">
     <div class="container-1">
       <div class="container abs-center">
-
+        
         <div class="row">
           <div class="col-sm-12 col-md-6 about-col-2 text-white">
             <div class="row p-1">
               <div class="col-12 col-about text-center title">
-                <h1>David Arechiga</h1>
+                <h1 >David Arechiga</h1>
                 <h5>DEVELOPER</h5>
               </div>
               <div class="col-12 col-about pt-3">
                 <h3>ABOUT ME</h3>
-                <p class="about-title">Engineer focused on process improvement through analytical programming tools and technology development. I have created, edited, and developed specific products for customers in the virtual, application, and installation sectors, facilitating and advising customers.</p>
+                <p class="about-title">Engineer focused on process improvement through analytical programming tools and technology development. I have created, edited, and developed specific products for customers in the virtual, application, and installation sectors, facilitating and advising customers.
+                </p>
                 <h3>Trivia</h3>
                 <p class="about-title"><i class="bi bi-award-fill"></i>I was part of the Brigades team at my University.
                   <br>
@@ -131,14 +132,12 @@
               <div class="col-12 col-about py-2">
                 <h4>PROJECTS</h4>
                 <div class="text-center h1" id="counter">0</div>
-                <h4>CUSTOMERS</h4>
+                <h4>CLIENTS</h4>
                 <div class="text-center h1" id="counter2">0</div>
               </div>
-              <!--ABOUT onclick="downloadPDFes()
-              <div class="col-12 col-about">
-                <button class="text-white cv">DOWNLOAD CV<i
-                    class="bi bi-download ps-3"></i></button>"-->
-              </div>
+              <!--<div class="col-12 col-about pt-3">
+                <button onclick="downloadPDF()" class="text-white cv">DOWNLOAD CV<i class="bi bi-download ps-3"></i></button>
+              </div>-->
             </div>
           </div>
 
@@ -150,7 +149,7 @@
       </div>
     </div>
   </section>
-
+        
   <!--SKILLS-->
   <section class="skills" id="skills">
     <div class="container-1">
