--- a/app.html
+++ b/app.html
@@ -27,14 +27,10 @@
   </header>
   <section class="container-2">
     <div class="container text-center">
-        <iframe src="https://apkpure.com/es/subliapp/com.ArtificialMakers.Subliapp" width="800" height="600"></iframe>
+        <iframe src="https://apkpure.com/es/developer/Artificial%20Makers" width="800" height="600"></iframe>
     </div>
   </section>
-  <section class="container-2">
-    <div class="container text-center">
-        <iframe src="https://apkpure.com/es/publimuroar/com.ArtificialMakers.PubliMuroAR1" width="800" height="600"></iframe>
-    </div>
-  </section>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
