--- a/app.html
+++ b/app.html
@@ -8,29 +8,37 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./webstyle.css">
-  <link rel="shortcut icon" href="./assets/controller.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link href="https://fonts.cdnfonts.com/css/lovintime" rel="stylesheet">
-  <title>Apps</title>
+  <title>FLOWERS</title>
 </head>
 
 <body>
-  <video playsinline autoplay loop muted src="./assets/david1.mp4"></video> <!--BACKGROUND-->
+  <video playsinline autoplay loop muted src="./assets/file.mp4"></video> <!--BACKGROUND-->
   <header>
     <nav class="nav navbar fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="./webdesig.html">
-          <img src="./assets/angles-left-solid.svg" style="background-color: white;" alt="Logo" width="30" height="24"
+          <img src="./assets/angles-left-solid.svg" alt="Logo" width="30" height="24"
             class="d-inline-block align-text-top logo">
         </a>
       </div>
     </nav>
   </header>
   <section class="container-2">
-    <div class="container text-center">
-        <iframe src="https://apkpure.com/es/developer/Artificial%20Makers" width="800" height="600"></iframe>
+    <div class="container">
+      <div class="row container container-2">
+        <div class="col container container-2 mx-5 py-5">
+           <img class="img-fluid" src="./FLOWER/1.png">
+          <img class="img-fluid" src="./FLOWER/2.png">
+          <img class="img-fluid" src="./FLOWER/3.png">
+          <img class="img-fluid" src="./FLOWER/4.png">
+          <img  class="img-fluid" src="./FLOWER/5.png">
+          <img  class="img-fluid" src="./FLOWER/6.png">
+        </div>
+      </div>
     </div>
   </section>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
