--- a/app.html
+++ b/app.html
@@ -29,12 +29,12 @@
     <div class="container">
       <div class="row container container-2">
         <div class="col container container-2 mx-5 py-5">
-           <img class="img-fluid" src="./FLOWER/1.png">
-          <img class="img-fluid" src="./FLOWER/2.png">
-          <img class="img-fluid" src="./FLOWER/3.png">
-          <img class="img-fluid" src="./FLOWER/4.png">
-          <img  class="img-fluid" src="./FLOWER/5.png">
-          <img  class="img-fluid" src="./FLOWER/6.png">
+           <img class="img-fluid" src="./assets/IMG_0043.jpeg">
+           <img class="img-fluid" src="./assets/IMG_0043.jpeg">
+           <img class="img-fluid" src="./assets/IMG_0043.jpeg">
+           <img class="img-fluid" src="./assets/IMG_0043.jpeg">
+           <img class="img-fluid" src="./assets/IMG_0043.jpeg">
+           <img class="img-fluid" src="./assets/IMG_0043.jpeg">
         </div>
       </div>
     </div>
